src/FireWrapper/wrapper.h

typedef unsigned __int64 ImU64;
typedef struct ImVec4 ImVec4;
typedef struct ImVec2 ImVec2;
typedef struct ImGuiViewport ImGuiViewport;
typedef struct ImGuiPlatformIO ImGuiPlatformIO;
typedef struct ImDrawData ImDrawData;
struct ImDrawData;
struct ImGuiPlatformIO;
struct ImGuiViewport;
typedef int ImGuiViewportFlags;
typedef void* ImTextureID;
typedef unsigned int ImGuiID;
typedef uint64_t ImU64;
typedef struct ImVector_ImGuiPlatformMonitor { int Size; int Capacity; ImGuiPlatformMonitor* Data; } ImVector_ImGuiPlatformMonitor;
typedef struct ImVector_ImGuiViewportPtr { int Size; int Capacity; ImGuiViewport** Data; } ImVector_ImGuiViewportPtr;
struct ImVec2
{
	float x, y;
};
struct ImVec4
{
	float x, y, z, w;
};
struct ImDrawData
{
	bool Valid;
	ImDrawList** CmdLists;
	int CmdListsCount;
	int TotalIdxCount;
	int TotalVtxCount;
	ImVec2 DisplayPos;
	ImVec2 DisplaySize;
	ImVec2 FramebufferScale;
	ImGuiViewport* OwnerViewport;
};
struct ImGuiPlatformIO
{
	void(*Platform_CreateWindow)(ImGuiViewport* vp);
	void(*Platform_DestroyWindow)(ImGuiViewport* vp);
	void(*Platform_ShowWindow)(ImGuiViewport* vp);
	void(*Platform_SetWindowPos)(ImGuiViewport* vp, ImVec2 pos);
	ImVec2(*Platform_GetWindowPos)(ImGuiViewport* vp);
	void(*Platform_SetWindowSize)(ImGuiViewport* vp, ImVec2 size);
	ImVec2(*Platform_GetWindowSize)(ImGuiViewport* vp);
	void(*Platform_SetWindowFocus)(ImGuiViewport* vp);
	bool(*Platform_GetWindowFocus)(ImGuiViewport* vp);
	bool(*Platform_GetWindowMinimized)(ImGuiViewport* vp);
	void(*Platform_SetWindowTitle)(ImGuiViewport* vp, const char* str);
	void(*Platform_SetWindowAlpha)(ImGuiViewport* vp, float alpha);
	void(*Platform_UpdateWindow)(ImGuiViewport* vp);
	void(*Platform_RenderWindow)(ImGuiViewport* vp, void* render_arg);
	void(*Platform_SwapBuffers)(ImGuiViewport* vp, void* render_arg);
	float(*Platform_GetWindowDpiScale)(ImGuiViewport* vp);
	void(*Platform_OnChangedViewport)(ImGuiViewport* vp);
	void(*Platform_SetImeInputPos)(ImGuiViewport* vp, ImVec2 pos);
	int(*Platform_CreateVkSurface)(ImGuiViewport* vp, ImU64 vk_inst, const void* vk_allocators, ImU64* out_vk_surface);
	void(*Renderer_CreateWindow)(ImGuiViewport* vp);
	void(*Renderer_DestroyWindow)(ImGuiViewport* vp);
	void(*Renderer_SetWindowSize)(ImGuiViewport* vp, ImVec2 size);
	void(*Renderer_RenderWindow)(ImGuiViewport* vp, void* render_arg);
	void(*Renderer_SwapBuffers)(ImGuiViewport* vp, void* render_arg);
	ImVector_ImGuiPlatformMonitor Monitors;
	ImGuiViewport* MainViewport;
	ImVector_ImGuiViewportPtr Viewports;
};
struct ImGuiViewport
{
	ImGuiID ID;
	ImGuiViewportFlags Flags;
	ImVec2 Pos;
	ImVec2 Size;
	ImVec2 WorkOffsetMin;
	ImVec2 WorkOffsetMax;
	float DpiScale;
	ImDrawData* DrawData;
	ImGuiID ParentViewportId;
	void* RendererUserData;
	void* PlatformUserData;
	void* PlatformHandle;
	void* PlatformHandleRaw;
	bool PlatformRequestMove;
	bool PlatformRequestResize;
	bool PlatformRequestClose;
};
typedef ImVector<ImGuiPlatformMonitor> ImVector_ImGuiPlatformMonitor;
typedef ImVector<ImGuiViewport*> ImVector_ImGuiViewportPtr;
CIMGUI_API bool igComboFnBoolPtr(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int popup_max_height_in_items);
CIMGUI_API bool igListBoxFnBoolPtr(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items);
CIMGUI_API void igSetAllocatorFunctions(void*(*alloc_func)(size_t sz, void* user_data), void(*free_func)(void* ptr, void* user_data), void* user_data);
CIMGUI_API int igApp_MainLoop(const char* title, void(*OnInit)(), void(*OnGUI)(), void(*OnExit)());
CIMGUI_API void igSetWindowTitle(ImGuiViewport* viewport, const char* title);
CIMGUI_API bool igLoadTexture(const char* filename, unsigned int* texture_id, int* out_width, int* out_height);
CIMGUI_API bool igImageAnimButton(ImTextureID user_texture_id, ImTextureID user_texture_id2, const ImVec2 size, const ImVec2 uv0, const ImVec2 uv1, const ImVec2 uv2, const ImVec2 uv3, int frame_padding, const ImVec4 bg_col, const ImVec4 tint_col);
CIMGUI_API bool igToggleButton(ImTextureID user_texture_id, ImTextureID user_texture_id2, bool* v, const ImVec2 size, const ImVec2 uv0, const ImVec2 uv1, const ImVec2 uv2, const ImVec2 uv3, int frame_padding, const ImVec4 bg_col, const ImVec4 tint_col);
CIMGUI_API void igToggleButtonStr(const char* str_id, bool* v);
CIMGUI_API bool igImageRadioButtonBool(ImTextureID tid_active, ImTextureID tid_deactivate, const ImVec2 size, bool active);
CIMGUI_API bool igImageRadioButtonIntPtr(ImTextureID tid_active, ImTextureID tid_deactivate, const ImVec2 size, int* v, int v_button);
CIMGUI_API void igTestInitDrawInCPP(int viewportWidth, int viewportHeight);
CIMGUI_API void igTestRenderInCPP(int viewportWidth, int viewportHeight);
CIMGUI_API void igTestFiniDrawInCPP();
CIMGUI_API ImTextureID igGetTestRenderInCPPFBO();
CIMGUI_API void igbgfxInit(int viewportWidth, int viewportHeight);
CIMGUI_API void igbgfxTick();
CIMGUI_API void igbgfxFini();
CIMGUI_API ImTextureID iggetbgfxfbo();